--- a/Netrom/Components/Pages/AddUserPage.razor
+++ b/Netrom/Components/Pages/AddUserPage.razor
@@ -6,7 +6,7 @@
 @using Netrom.Entities
 
 @rendermode InteractiveServer
-<h3>AddOrEdit</h3>
+<h2>Add/Edit User</h2>
     <EditForm
         Model="@UserDto"
         OnValidSubmit="@SaveUser"
