--- a/Netrom/Components/Pages/DeleteConfirmationDialog.razor
+++ b/Netrom/Components/Pages/DeleteConfirmationDialog.razor
@@ -3,8 +3,8 @@
         <span class="close" @onclick="CloseModal">&times;</span>
         <h2>Confirm Delete</h2>
         <p>Are you sure you want to delete this item?</p>
-        <button @onclick="ConfirmDelete">Yes</button>
-        <button @onclick="CloseModal">No</button>
+        <button class = "buton" @onclick="ConfirmDelete">Yes</button>
+        <button class = "buton" @onclick="CloseModal">No</button>
     </div>
 </div>
 
@@ -79,6 +79,7 @@
     .btn-secondary:hover {
         background-color: #5a6268;
     }
+   
 
    
 
