--- a/Netrom/Components/Layout/MainLayout.razor
+++ b/Netrom/Components/Layout/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 
-<div class="page">
+<div class="page" style="background-color: grey; backdrop-filter: blur(8px)">
     <div class="sidebar">
         <NavMenu />
     </div>
@@ -11,7 +11,7 @@
         @*     <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a> *@
         @* </div> *@
 
-        <article class="content px-4">
+        <article class="content px-4" style="background-color: grey; backdrop-filter: blur(8px)">
             @Body
         </article>
     </main>
@@ -22,3 +22,12 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+<style>
+    div.page > div.sidebar {
+        /*background-image: linear-gradient(180deg, rgb(255, 255 , 255) 0%, #3a0647 70%);*/
+        /*background-image: linear-gradient(180deg, rgb(34, 193, 195) 0%, #3a0647 70%);*/
+        /*background-image: linear-gradient(180deg, #f7ca18 0%, #d2d2d2 100%);*/
+        /*background-image: linear-gradient(180deg, #f7ca18 0%, #00b140 50%, #d2d2d2 100%);*/
+        background-image: linear-gradient(180deg, #ff0000 0%, #000000 50%, #808080 100%);
+    }
+</style>
