--- a/Netrom/Components/Layout/MainLayout.razor.css
+++ b/Netrom/Components/Layout/MainLayout.razor.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background-color: white;
+    background-color: grey;
 }
 
 main {
@@ -10,8 +10,8 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
-    /*//background-image: linear-gradient(180deg, rgb(34, 193, 195) 0%, #3a0647 70%);*/
+    /*background-image: linear-gradient(180deg, rgb(255, 255 , 255) 0%, #3a0647 70%);*/
+    background-image: linear-gradient(180deg, rgb(34, 193, 195) 0%, #3a0647 70%);
 
 }
 
