--- a/Netrom/Components/Layout/NavMenu.razor
+++ b/Netrom/Components/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using Netrom.Services.Interfaces
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Smart Workout App</a>
     </div>
@@ -8,13 +9,7 @@
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
-        @* <div class="nav-item px-3"> *@
-        @*     <NavLink class="nav-link" href="" Match="NavLinkMatch.All"> *@
-        @*         <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home *@
-        @*     </NavLink> *@
-        @* </div> *@
-
-        @* href = "users" *@
+        
         <AuthorizeView>
             <NotAuthorized>
                 <div class="nav-item px-3">
@@ -55,12 +50,30 @@
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="Logout">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Logout
-                    </NavLink>
+                    @* <NavLink class="nav-link" href="Logout"> *@
+                    @*     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Logout *@
+                    @* </NavLink> *@
+                    <Button Color="Color.Dark"  Clicked="() => Logout()" Block>
+                        Logout
+                    </Button>
                 </div>
             </Authorized>
         </AuthorizeView>
     </nav>
 </div>
+
+@code{
+
+    [Inject]
+    NavigationManager Navigation { get; set; }
+    [Inject]
+    public IAuthService AuthService { get; set; }
+
+    public void Logout()
+    {
+        AuthService.LogOut();
+        Navigation.NavigateTo("/", true);
+    }
+
+}
 
