--- a/Netrom/Components/Pages/AddEditExercisePage.razor
+++ b/Netrom/Components/Pages/AddEditExercisePage.razor
@@ -3,7 +3,7 @@
 @using Netrom.Repositories.Interfaces
 @page "/exercise/add"
 @page "/exercise/edit/{ExerciseId:int}"
-<h3>AddOrEdit Exercise</h3>
+<h2>Add/Edit Exercise</h2>
 
 @rendermode InteractiveServer
 <EditForm Model="@ExerciseDto" OnValidSubmit=@SaveExercise FormName="editForm">
@@ -25,7 +25,7 @@
     </div>
     
     <div class="form-group">
-        <input type="submit" class="btn btn-primary" value="Save"/>
+        <input type="submit" class="btn btn-primary" style="background-color: black; border: black" value="Save"/>
     </div>
 </EditForm>  
 
