--- a/Netrom/Components/Pages/ExercisesLogPage.razor
+++ b/Netrom/Components/Pages/ExercisesLogPage.razor
@@ -1,23 +1,80 @@
+@page "/exercisesLog"
+@page "/exerciseLog/{WorkoutId:int}"
 @using Blazornetrom.Entites
 @using Microsoft.AspNetCore.Authorization
-@page "/exercisesLog"
 @attribute [Authorize(Roles = "Administrator")]
-@page "/exerciseLog/{WorkoutId:int}"
 
-<h3>ExercisesLogPage</h3>
+<h3>Exercises Log Page</h3>
 
-<Button Color="Color.Dark" Size="Size.Medium">
-    <NavLink class="butonAddUser" href="/exerciseLog/add" >Add Exercise Log</NavLink>
-</Button>
+@* <div class="add-button-container"> *@
+@*     <NavLink class="button add-log-button" href="/exerciseLog/add">Add Exercise Log</NavLink> *@
+@* </div> *@
 
-<DataGrid TItem = "ExerciseLog"
-          Data = "@ExerciseLogList"
-          Filterable
-          FilterMethod="DataGridFilterMethod.StartsWith"
-          Responsive>
+<div class="cards-container">
+    @foreach (var log in ExerciseLogList)
+    {
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">@log.Workouts.Name</h5>
+                <p class="card-text">Reps: @log.Reps</p>
+                <p class="card-text">Duration: @log.Duration minutes</p>
+                <p class="card-text">Exercise: @log.Exercises.Description</p>
+            </div>
+        </div>
+    }
+</div>
 
-    <DataGridColumn TItem="ExerciseLog" Field="Workouts.Name" Caption="Workout Name"></DataGridColumn>
-    <DataGridColumn TItem="ExerciseLog" Field="Reps" Caption="Reps"></DataGridColumn>
-    <DataGridColumn TItem="ExerciseLog" Field="Duration" Caption="Duration"></DataGridColumn>
-    <DataGridColumn TItem="ExerciseLog" Field="Exercises.Description" Caption="Exercise Name"></DataGridColumn>
-</DataGrid>
+<style>
+    .add-button-container {
+        margin-bottom: 20px;
+        text-align: right;
+    }
+    
+    .button {
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        font-size: 16px;
+    }
+
+    .cards-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 50px;
+    }
+
+    .card {
+        background-color: white;
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        width: 300px;
+    }
+
+    .card-body {
+        padding: 20px;
+    }
+    .card:hover {
+        box-shadow: 0 10px 16px rgba(0,0,0,0.2);
+    }
+
+    .card-text {
+        font-size: 16px;
+        margin-bottom: 10px;
+        color: #666;
+    }
+    body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        line-height: 1.6;
+        color: #333;
+    }
+
+    .card-title {
+        font-size: 1.4em;
+        color: #0056b3; /* A nice blue for titles */
+    }
+</style>
